--- a/portfolio.html
+++ b/portfolio.html
@@ -336,6 +336,26 @@
             </li>
           </ul>
         </div>
+        <form class="subscribe-form">
+          <h2 class="subscribe-tittle">Subscribe</h2>
+          <div class="subscribe-field">
+            <label for="email" class="subscribe-field">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="E-mail"
+                class="mail-input"
+              />
+            </label>
+            <button type="submit" class="button subscribe-button">
+              Subscribe
+              <svg class="subscribe-icon">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
