--- a/index.html
+++ b/index.html
@@ -425,6 +425,77 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <h2 class="modal-tittle">
+          Leave your contacts and we will call you back
+        </h2>
+        <form>
+          <div class="modal-item">
+            <label class="modal-label"
+              >Name
+              <input type="text" name="user-name" class="modal-input" />
+              <svg class="modal-icon">
+                <use
+                  href="./images/icons.svg#icon-person"
+                  width="18"
+                  height="18"
+                ></use>
+              </svg>
+            </label>
+          </div>
+          <div class="modal-item">
+            <label class="modal-label"
+              >Phone
+              <input type="tel" name="user-number" class="modal-input" />
+              <svg class="modal-icon">
+                <use
+                  href="./images/icons.svg#icon-phone"
+                  width="18"
+                  height="24"
+                ></use>
+              </svg>
+            </label>
+          </div>
+          <div class="modal-item">
+            <label class="modal-label"
+              >Email
+              <input type="email" name="user-mail" class="modal-input" />
+              <svg class="modal-icon">
+                <use
+                  href="./images/icons.svg#icon-mail"
+                  width="18"
+                  height="24"
+                ></use>
+              </svg>
+            </label>
+          </div>
+
+          <label class="comment-lable">
+            Comment
+            <textarea
+              class="form-comment"
+              name="comments"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+
+          <label class="modal-checkbox">
+            <input
+              type="checkbox"
+              name="accept-policy"
+              class="accept-checkbox"
+            />
+            <span class="check-box">
+              <svg class="checkbox-icon">
+                <use href="./images/icons.svg#icon-checkbox"></use>
+              </svg>
+            </span>
+            <span class="accept-text">
+              I accept the terms and conditions of the
+            </span>
+            <a class="policy-link" href="#">Privacy Policy</a>
+          </label>
+          <button type="submit" class="form-button">Send</button>
+        </form>
       </div>
     </div>
 
